--- a/index.css
+++ b/index.css
@@ -35,20 +35,26 @@
     }
 
 
-
+/* 
 .backgroundimage{
     width:100%;
     height:100vh;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(pray.png);
     background-size: cover;
     background-position:center;
+} */
+.nav-tools ul{
+    display: flex;
+    gap:40px;
 }
-
+.nav-tools ul:last-child{
+    padding-right:20px;
+}
 nav{
     position: relative;
     width:100%;
     /* margin:auto; */
-    padding:10px 0;
+    /* padding:10px; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -56,19 +62,23 @@ nav{
     position:fixed;
     border:0px solid white; 
     z-index:999;
+    background-color: red;
     
 }
+
+nav
 .logo{
     width:170px;
     cursor: pointer;
     padding-left:25px;
     /* margin-left:20px; */
 }
-nav ul li{
-    list-style: none;
-    display: inline-block;
-    margin:0 20px;
-    position: relative;
+.nav-tools{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+
 }
 nav ul li a{
     text-decoration: none;
@@ -92,16 +102,44 @@ nav ul li:hover::after{
     
 }
 
-nav i{
+label i{
     display: none!important;
     font-size:25px;
     color: #fff;
 }
-nav input{
+ input{
     display: none;
 }
 input:checked ~ li{
     left:0;
+}
+
+@media screen and (max-width:800px){
+    .nav-tools ul {
+        position: fixed;
+        flex-direction: column;
+        background-color: grey;
+        top: 57px;
+        left: 0;
+        width: 100%;
+        justify-content: start;
+        height: 100vh;
+        align-items: center;
+        padding-top: 80px;
+        left: -100%;
+        transition: all 0.7s;
+        /* z-index:1000; */
+    }
+    nav i{
+        padding-top: 10px;
+        font-size: 30px;
+        display: block!important;
+        padding-right:20px;
+    }
+    #navbar:checked~ul{
+        left: 0;
+    }
+  
 }
 
 
@@ -872,18 +910,13 @@ width:100%;
     .go .top i{
         font-size:30px;
         color: silver;
-        /* display: block!important; */
+    
     }
 
 
-   
+/* media query    */
 
 
-@media screen and (max-width:1200px){
-        nav {
-            display: none!important;
-        }
-    } 
 
 @media screen and (max-width:500px){
     .footer {
