--- a/index.css
+++ b/index.css
@@ -35,21 +35,18 @@
     }
 
 
-/* 
 .backgroundimage{
     width:100%;
     height:100vh;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(pray.png);
     background-size: cover;
     background-position:center;
-} */
+} 
 .nav-tools ul{
     display: flex;
     gap:40px;
 }
-.nav-tools ul:last-child{
-    padding-right:20px;
-}
+
 nav{
     position: relative;
     width:100%;
@@ -62,16 +59,12 @@ nav{
     position:fixed;
     border:0px solid white; 
     z-index:999;
-    background-color: red;
+    
     
 }
 
-nav
-.logo{
-    width:170px;
-    cursor: pointer;
-    padding-left:25px;
-    /* margin-left:20px; */
+.nav-tools ul:last-child{
+    padding-right:35px;
 }
 .nav-tools{
     display: flex;
@@ -85,21 +78,18 @@ nav ul li a{
     color:#fff;
     text-transform: uppercase;
     font-weight: bold;
-    font-size:18px;
+    font-size:22px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-nav ul li::after{
-    content:" ";
-    height: 2.5px;
-    width: 0;
-    background-color:yellow;
-    position: absolute;
-    left:0;
-    bottom:-7px;
-    transition: 0.5s;
+
+nav ul li a:hover{
+    cursor: pointer;
+    text-shadow: #00fcf4 0px 0px 10px;
 }
-nav ul li:hover::after{
-    width:100%;
-    
+.logo img{
+    padding-left: 20px;
+    padding-top:5px;
+    width:180px;
 }
 
 label i{
@@ -118,8 +108,8 @@ input:checked ~ li{
     .nav-tools ul {
         position: fixed;
         flex-direction: column;
-        background-color: grey;
-        top: 57px;
+        background:linear-gradient(120deg,black,#0a3737,#131314);
+        top: 70px;
         left: 0;
         width: 100%;
         justify-content: start;
@@ -139,14 +129,14 @@ input:checked ~ li{
     #navbar:checked~ul{
         left: 0;
     }
-  
+    nav ul li a{
+        font-size:23px;
+    }
+    .nav-tools ul:last-child{
+        padding:0px;
+    }
+    
 }
-
-
-
-
-
-
 
 
 
