--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ nav{
 }
 
 .nav-tools ul:last-child{
+    
     padding-right:35px;
 }
 .nav-tools{
@@ -113,7 +114,7 @@ input:checked ~ li{
         left: 0;
         width: 100%;
         justify-content: start;
-        height: 100vh;
+        height: 88vh;
         align-items: center;
         padding-top: 80px;
         left: -100%;
@@ -134,6 +135,7 @@ input:checked ~ li{
     }
     .nav-tools ul:last-child{
         padding:0px;
+        padding-top: 60px;
     }
     
 }
