--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ input:checked ~ li{
         padding-top: 80px;
         left: -100%;
         transition: all 0.7s;
-        /* z-index:1000; */
+        z-index:1000;
     }
     nav i{
         padding-top: 10px;
